# Spark

./: .gitignore  .gitmodules  CMakeLists.txt
Spark/: CMakeLists.txt  dependencies.cmake
Spark/src/: Spark.h
Spark/src/ExternalApi/glfw_api/: glfw_window.cpp  glfw_window.h
Spark/src/Platform/MultiPlatform/: glfw_window.cpp
Spark/src/Spark/Core/: Application.cpp  Application.h  Core.h  Event.h  Window.cpp  Window.h
Spark/src/Spark/Events/: ApplicationEvents.h  Event.h  KeyBoardEvents.h  MouseEvents.h
Spark_app/: CMakeLists.txt
Spark_app/src/: Spark_app.cpp
test/: CMakeLists.txt
test/src/: test.cpp
